// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimerSummaryItem renders correctly 1`] = `
<SummaryItem
  title="rating"
>
  <TouchableOpacity
    disabled={true}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "space-between",
      }
    }
  >
    <SimpleTimer
      end={1646743357245}
      style={
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
        }
      }
    />
  </TouchableOpacity>
</SummaryItem>
`;

exports[`TimerSummaryItem renders correctly with action 1`] = `
<SummaryItem
  title="rating"
>
  <TouchableOpacity
    disabled={false}
    onPress={[MockFunction]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "space-between",
      }
    }
  >
    <SimpleTimer
      end={1646743357245}
      style={
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
        }
      }
    />
    <Icon
      color="#BADA55"
      id="checkCircle"
      size={16}
    />
  </TouchableOpacity>
</SummaryItem>
`;

exports[`TimerSummaryItem renders correctly with icon 1`] = `
<SummaryItem
  title="rating"
>
  <TouchableOpacity
    disabled={true}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "space-between",
      }
    }
  >
    <SimpleTimer
      end={1646743357245}
      style={
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
        }
      }
    />
    <Icon
      color="#BADA55"
      id="checkCircle"
      size={16}
    />
  </TouchableOpacity>
</SummaryItem>
`;
